<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DosenFragment">

    <!-- TODO: Update blank fragment layout -->
    <SearchView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="DATA DOSEN PEMBIMBING"
        android:textAlignment="center"
        android:textStyle="bold"
        android:layout_marginTop="40dp"
        android:textSize="25dp" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="495dp"
        android:layout_marginTop="100dp">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="384dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/green">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="4"
                    android:paddingLeft="10sp"
                    android:text="@string/dosen_nama"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="4"
                    android:paddingLeft="10sp"
                    android:text="@string/dosen_kelamin"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="4"
                    android:paddingLeft="10sp"
                    android:text="@string/dosen_keahlian"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/textVieww"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="4"
                    android:paddingLeft="10sp"
                    android:text="@string/dosen_kuota"
                    android:textColor="@color/white" />


            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="4"
                    android:paddingLeft="10sp"
                    android:text="@string/okegas"></TextView>

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="4"
                    android:paddingLeft="10sp"
                    android:text="@string/okegas1" />

                <TextView
                    android:id="@+id/textView14"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="4"
                    android:paddingLeft="10sp"
                    android:text="@string/okegas2" />

                <TextView
                    android:id="@+id/lihat"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="4"
                    android:textColor="@color/adat"
                    android:paddingLeft="10sp"
                    android:text="@string/okegas3" />

            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="4"
                    android:paddingLeft="10sp"
                    android:text="@string/gas"></TextView>

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="4"
                    android:paddingLeft="10sp"
                    android:text="@string/gas1" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="4"
                    android:paddingLeft="10sp"
                    android:text="@string/gas2" />
                <TextView
                    android:id="@+id/lihat2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="4"
                    android:paddingLeft="10sp"
                    android:textColor="@color/adat"
                    android:text="@string/gas3" />

            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="4"
                    android:paddingLeft="10sp"
                    android:text="@string/bisa"></TextView>

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="4"
                    android:paddingLeft="10sp"
                    android:text="@string/bisa1" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="4"
                    android:paddingLeft="10sp"
                    android:text="@string/bisa2" />

                <TextView
                    android:id="@+id/lihat3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="4"
                    android:paddingLeft="10sp"
                    android:textColor="@color/adat"
                    android:text="@string/bisa3" />


            </TableRow>

        </TableLayout>

    </FrameLayout>

</FrameLayout>
